adding severals corrections in order to make the front app run with our back